Fixed visualn_embed preview width to prevent horizontal scroll

--- a/modules/visualn_embed/css/preview-drawing-dialog.css
+++ b/modules/visualn_embed/css/preview-drawing-dialog.css
@@ -2,7 +2,7 @@
 /* @todo: consider responsive styles also */
 /* the class is also used for visualn-core.js context_wrapper setting */
 .preview-content {
-  min-width: 800px;
+  /*min-width: 800px;*/
   border: 1px solid #ccc;
   margin: 5px;
   padding: 5px;
